@@ -33,7 +33,7 @@ import java.util.Optional;
 
 @AutoSpellConfig
 public class SummonWeakness extends AbstractSpell {
-    private final ResourceLocation spellId = new ResourceLocation(dacxirons.MOD_ID, "summon");
+    private final ResourceLocation spellId = new ResourceLocation(dacxirons.MOD_ID, "summon_weakness");
     private final DefaultConfig defaultConfig = new DefaultConfig()
             .setAllowCrafting(false)
             .setMinRarity(SpellRarity.UNCOMMON)
@@ -44,7 +44,8 @@ public class SummonWeakness extends AbstractSpell {
 
     @Override
     public List<MutableComponent> getUniqueInfo(int spellLevel, LivingEntity caster) {
-        return List.of(Component.translatable("ui.irons_spellbooks.summon_count", spellLevel));
+        return List.of(Component.translatable("ui.irons_spellbooks.summon_count", spellLevel),
+                      (Component.translatable("ui.dacxirons.summon_hp", Math.round(getHealth(new SummonedWeakness(caster, true), caster, spellLevel)))));
     }
 
     public SummonWeakness() {
@@ -96,8 +97,10 @@ public class SummonWeakness extends AbstractSpell {
 
             var yrot = 6.281f / spellLevel * i + entity.getYRot() * Mth.DEG_TO_RAD;
             Vec3 spawn = Utils.moveToRelativeGroundLevel(world, entity.getEyePosition().add(new Vec3(radius * Mth.cos(yrot), 0, radius * Mth.sin(yrot))), 10);
-
+           //get health
+            arthropod.setHealth(getHealth(arthropod, entity, spellLevel));
             arthropod.setPos(spawn.x, spawn.y, spawn.z);
+
             arthropod.setYRot(entity.getYRot());
             arthropod.setOldPosAndRot();
             world.addFreshEntity(arthropod);
@@ -114,6 +117,8 @@ public class SummonWeakness extends AbstractSpell {
 
     }
 
-
+    public float getHealth(LivingEntity monster, LivingEntity entity, int spellLevel){
+        return (float) (monster.getMaxHealth() * 0.05 * getSpellPower(spellLevel, entity));
+    }
 
 }
